Fixed website cutoff

--- a/src/scss/comps.scss
+++ b/src/scss/comps.scss
@@ -2,6 +2,11 @@
 
 $content_width: 700px;
 
+#root {
+  overflow: auto;
+  height: 100%;
+}
+
 .Background {
   width: 100%;
   height: 100%;
